[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hardrada"
version = "4.2.0"
authors = [
  { name="Jonas Peters", email="jonas.peters123@gmail.com" },
]
description = "This is a project aimed at overriding the default admin templates of Django 4.2, using Bootstrap 5 as the base for the new templates."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords=["django", "plugin", "bootstrap", "admin", "templates"]
dependencies = [
  "Django>=4.2",
]

[project.urls]
Homepage = "https://bitbucket.org/jonaspeters/hardrada"
Issues = "https://bitbucket.org/jonaspeters/hardrada/jira"